Spacing fixes for portrait layout of Projects component

--- a/src/App.scss
+++ b/src/App.scss
@@ -1007,7 +1007,7 @@ svg {
   }
 
   #projects .header {
-    left: -2.5%;
+    left: 5%;
   }
 
   .projects-grid {
@@ -1154,7 +1154,7 @@ svg {
       }
 
       #about .header {
-        left: -5%;
+        left: -2.5%;
       }
 
       .about-box {
@@ -1178,7 +1178,7 @@ svg {
       };
 
       .about-img img {
-        width: 35%;
+        width: 20%;
         height: auto;
         position: relative;
       };
@@ -1340,11 +1340,11 @@ svg {
       #projects {
         overflow-y: scroll;
         overflow-x: hidden;
-        left: -2.5%;
+        left: -4.5%;
       }
 
       #projects .header {
-        left: 5%;
+        left: 10%;
       }
 
       .projects-grid {
